# embedded-c-template

./: CMakeLists.txt  README.md  build.py
.github/workflows/: build_and_test.yml
components/example_component/test/: test_example.cpp
include/: common.h
src/: main.c
toolchains/: gcc-arm-none-eabi.cmake
